--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*.tfstate         # Infrastructure condition
-*.tfstate.backup  # Infrastructure state backup
-.terraform/       # Terraform module directories
-terraform.tfvars  # variable file
-.env              # variable file
-*.pem             # Keys with pem extension
+*.tfstate
+*.tfstate.backup
+.terraform/
+terraform.tfvars
+.env
+*.pem
